--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "b6b6fe262307f0",
-    "password": "976ee571",
-    "database": "heroku_84711ec8da3f083",
-    "host": "eu-cdbr-west-03.cleardb.net",
+    "username": "b915a98d4e8782",
+    "password": "e3c8fa28",
+    "database": "heroku_c9ddb58232fc3bf",
+    "host": "us-cdbr-east-06.cleardb.net",
     "dialect": "mysql"
   }
 }
